# gridscale

./: .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  readme.MD  semgrep_rules.yaml
alembic/versions/: 39d319bcf53c_initial.py
app/: __init__.py  config.py
app/errors/: exceptions.py  handlers.py
app/main/: routes.py  serializer.py  utils.py
app/models/: city.py
app/views/: cities.py
app/views/swagger/: delete_city.yml  get_cities.yml  get_city.yml  post_cities.yml  update_city.yml
tests/: conftest.py  test_cities.py
